# subscription-app-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-lambda.yml
alembic/: env.py
alembic/versions/: a248bab446a2_add_unique_index_for_categories_name_.py  c1a2b3d4e5f6_add_users_table.py  d2b3c4e5f6a7_add_usage_statuses_table.py  e3c4d5e6f7a8_add_usage_logs_table.py  f4d5e6f7a8b9_add_payment_histories_table.py  f63defb6430f_init.py
app/: main.py
app/api/: deps.py
app/api/routes/: categories.py  dashboard.py  expenses.py  payment_histories.py  usage_logs.py
app/core/: auth.py  config.py  dev_user.py
app/models/: __init__.py  category.py  enums.py  expense.py  mixins.py  payment_history.py  usage_log.py  usage_status.py  user.py
app/schemas/: category.py  dashboard.py  expense.py  payment_history.py  usage_log.py
app/services/: cancel_suggestion.py
scripts/: seed.py
