[project]
name = "subs-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "python-jose[cryptography] (>=3.5.0,<4.0.0)",
]

[tool.uvicorn]
factory = false

[tool.setuptools]
packages = ["app"]

[tool.poetry]
package-mode = false

